# aoc2019

./: .gitignore  CMakeLists.txt  RunMSVC.bat
data/: day24_test1b.txt
src/: .clang-format  CMakeLists.txt  asteroid.cpp  asteroid.h  coord.h  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  fuel.cpp  fuel.h  graph.h  image.cpp  image.h  io.cpp  io.h  moon.cpp  moon.h  opcode.cpp  (+11 more)
src/day1/: CMakeLists.txt  main.cpp
src/day2/: CMakeLists.txt  main.cpp  opcode.cpp  opcode.h
src/day3/: CMakeLists.txt  intersection.cpp  intersection.h  main.cpp
src/day4/: CMakeLists.txt  main.cpp
src/day5/: CMakeLists.txt  main.cpp  opcode2.cpp  opcode2.h
src/day6/: CMakeLists.txt  main.cpp
